<resources>
    <string name="app_name">ActivityLab</string>
    <string name="title_activity_second">ActivityLab</string>

    <string name="onCreate">onCreate() calls: </string>
    <string name="onStart">onStart() calls: </string>
    <string name="onResume">onResume() calls: </string>
    <string name="onRestart">onRestart() calls: </string>
    <string name="defaultCount">0</string>
    <string name="action_settings">Settings</string>
    <string name="startTwo">Start Activity Two</string>
    <string name="endTwo">Close Activity Two</string>
</resources>
